--- a/package.json
+++ b/package.json
@@ -1,5 +1,35 @@
 {
+  "name": "roblox-rewards-backend",
+  "version": "1.0.0",
+  "description": "Backend server for Roblox Rewards platform",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "roblox",
+    "rewards",
+    "api",
+    "nodejs",
+    "mongodb"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
